--- a/les1.html
+++ b/les1.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>les1</title>
+	<style>
+		.yellow {
+			background: yellow;
+		}
+	</style>
 </head>
 <body>
 	<script src="les1.js"></script>
