--- a/les1.html
+++ b/les1.html
@@ -10,6 +10,10 @@
 	</style>
 </head>
 <body>
+	<p>Первый параграф</p>
+	<p>Второй параграф</p>
+	<p>Третий параграф</p>
+	
 	<script src="les1.js"></script>
 </body>
 </html>
